manifests/sonarqube/overlays/test/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
spec:
  rules:
  - host: sonar.test.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarqube
            port:
              number: 9000
  tls:
  - hosts:
    - sonar.test.net
    secretName: tls-test-net-wildcard
